--- a/.github/workflows/push_image_ghcr.yml
+++ b/.github/workflows/push_image_ghcr.yml
@@ -1,12 +1,13 @@
 name: Push Prod Image to GHCR
 
 on:
-  release:
-    types: [published]
+  workflow_run:
+    workflows: ["Create Release and Tag"]
+    types: [completed]
 
 jobs:
   build-and-push:
-    if: github.event.release.prerelease == false
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     name: Build and Push
     runs-on: ubuntu-latest
     permissions:
